RetailDevGit/src/objects/ARM_Sub_Navigation_Item__c.object
<CustomObject>
    <description>Appirio Retail Management (ARM) Object</description>
    <fields>
        <fullName>Display_Name__c</fullName>
        <inlineHelpText>eg. &quot;HOME&quot;. The name provided here will be the displayed name of sub navigation item.</inlineHelpText>
        <label>Display Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines the state of Sub Navigation Item record</description>
        <inlineHelpText>If unchecked, this will not get reflected in the site</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Navigation_Item__c</fullName>
        <label>Navigation Item</label>
        <referenceTo>ARM_Navigation_Item__c</referenceTo>
        <relationshipLabel>Sub Navigation Items</relationshipLabel>
        <relationshipName>Sub_Navigation_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>The order in which the sub-navigation item will display on the site</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Page_URL__c</fullName>
        <inlineHelpText>Usually starts with /s/ where &apos;/s/&apos; being the home page. Note that name of pages is case sensitive.
eg. /s/mycases - in this case mycases page should be defined in community (lightning bolt) as a flexipage.</inlineHelpText>
        <label>Page-URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Sub Navigation Item</label>
    <nameField>
        <displayFormat>SNI-{0000}</displayFormat>
        <label>Sub Navigation Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Navigation Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>